--- a/TODOList/style.scss
+++ b/TODOList/style.scss
@@ -1,3 +1,50 @@
 body{
     background-color: lightgray;
+    .container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .input-line{
+            height: 50px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            label{
+                margin: 20px;
+            }
+            input{
+                margin: 20px;
+            }
+            button{
+                margin: 20px;
+            }
+        }
+        .todos{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            .todo-item{
+                padding-left: 30px;
+                padding-right: 30px;
+                width: 50%;
+                height: 50px;
+                background-color: white;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin: 10px;
+                border-radius: 10px;
+                border: 2px solid black;
+                p{
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+                input{
+                    margin-right: 50px;
+                }
+            }
+        }   
+    }
 }
