update jeudi 16/09 matin tot

--- a/TODOList/style.css
+++ b/TODOList/style.css
@@ -1,3 +1,31 @@
+@keyframes apparition {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes disparition {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(150%);
+    opacity: 1;
+  }
+}
+.active {
+  animation: apparition 1000ms;
+}
+
+.fade {
+  animation: disparition 1000ms;
+}
+
 body {
   background-color: lightgray;
 }
