--- a/TPGéo/style.css
+++ b/TPGéo/style.css
@@ -1,3 +1,51 @@
-
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container .btn-line {
+  width: 50%;
+  height: 100px;
+  background-color: lightskyblue;
+  border-radius: 10px;
+  border: 2px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.container .btn-line button {
+  height: 30px;
+  border-radius: 10px;
+}
+.container .position {
+  margin-top: 20px;
+  width: 50%;
+  height: 50px;
+  border-radius: 10px;
+  border: 2px solid black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: lightskyblue;
+}
+.container .position .latitude {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 25%;
+  height: 30px;
+  border-radius: 10px;
+  background-color: white;
+}
+.container .position .longitude {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 25%;
+  height: 30px;
+  border-radius: 10px;
+  background-color: white;
+}
 
 /*# sourceMappingURL=style.css.map */
