--- a/TestD&G/style.scss
+++ b/TestD&G/style.scss
@@ -5,15 +5,18 @@ body{
     align-items: center;
     height: 100vh;
 }
-
 .base {
-    background-color: turquoise;
     height: 150px;
     width: 150px;
     position: relative;
     top: 5px;
     left: 5px;
-    cursor: pointer;
+    cursor: pointer; 
+    background-color: turquoise;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
 }
 
 .tenu {
@@ -30,4 +33,8 @@ body{
 .hovered {
     background-color: #f4f4f4;
     border-style: dashed;
+}
+
+.invisible{
+    display: none;
 }
